--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link href="//dl.dropbox.com/s/50g6fbds3rh4m0j/saturnicons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="img/donut.png"/>
+    <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="toppie"></div>
@@ -72,6 +73,11 @@
         <a href="" title="">beep boop</a>
         <a href="" title="">hee hoo</a>
       </div>
+      <div id="asterwrap">
+        <div id="asterism">
+
+        </div>
+      </div>
       <div id="burrito">
         <div id="potato">
           <div id="powder">
@@ -80,9 +86,7 @@
               <a href="/">Sample link 1</a>
             </div>
           </div>
-          <!--powder-->
         </div>
-        <!--potato-->
       </div>
     </div>
   </body>
