--- a/index.html
+++ b/index.html
@@ -75,10 +75,17 @@
       </div>
       <div id="asterwrap">
         <div id="asterism">
-
         </div>
       </div>
       <div id="burrito">
+        <div id="strawberry">
+          <a href="https://www.instagram.com/mobiusdonut/"><ion-icon name="logo-instagram"></ion-icon></a>
+          <a href="https://mobiusdonut.tumblr.com/"><ion-icon name="logo-tumblr"></ion-icon></a>
+          <a href="https://twitter.com/mobiusdonut"><ion-icon name="logo-twitter"></ion-icon></a>
+          <a href="https://www.youtube.com/channel/UCWWgBgth83qAPLkhWG3fHeA"><ion-icon name="logo-youtube"></ion-icon></a>
+          <a href="https://codepen.io/mobiusdonut"><ion-icon name="logo-codepen"></ion-icon></a>
+          <a href="https://github.com/mobiusdonut/"><ion-icon name="logo-github"></ion-icon></a>
+        </div>
         <div id="potato">
           <div id="powder">
             <div class="sparkle">
@@ -89,5 +96,6 @@
         </div>
       </div>
     </div>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
