--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
           </div>
         </div>
       </div>
+      <div id="asterwrap">
+        <div id="sardineaster"></div>
+        <div id="canolaaster"></div>
+        <div id="mapleaster"></div>
+        <div id="sageaster"></div>
+        <div id="asterism">
+          <div id="strawberry">
+            <a href="https://www.instagram.com/mobiusdonut/"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="https://mobiusdonut.tumblr.com/"><ion-icon name="logo-tumblr"></ion-icon></a>
+            <a href="https://twitter.com/mobiusdonut"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="https://www.youtube.com/channel/UCWWgBgth83qAPLkhWG3fHeA"><ion-icon name="logo-youtube"></ion-icon></a>
+            <a href="https://codepen.io/mobiusdonut"><ion-icon name="logo-codepen"></ion-icon></a>
+            <a href="https://github.com/mobiusdonut/"><ion-icon name="logo-github"></ion-icon></a>
+          </div>
+        </div>
+      </div>
       <div id="electric">
         <a href="">woo hoo</a>
         <a href="">yee yee</a>
@@ -73,19 +89,7 @@
         <a href="" title="">beep boop</a>
         <a href="" title="">hee hoo</a>
       </div>
-      <div id="asterwrap">
-        <div id="asterism">
-        </div>
-      </div>
       <div id="burrito">
-        <div id="strawberry">
-          <a href="https://www.instagram.com/mobiusdonut/"><ion-icon name="logo-instagram"></ion-icon></a>
-          <a href="https://mobiusdonut.tumblr.com/"><ion-icon name="logo-tumblr"></ion-icon></a>
-          <a href="https://twitter.com/mobiusdonut"><ion-icon name="logo-twitter"></ion-icon></a>
-          <a href="https://www.youtube.com/channel/UCWWgBgth83qAPLkhWG3fHeA"><ion-icon name="logo-youtube"></ion-icon></a>
-          <a href="https://codepen.io/mobiusdonut"><ion-icon name="logo-codepen"></ion-icon></a>
-          <a href="https://github.com/mobiusdonut/"><ion-icon name="logo-github"></ion-icon></a>
-        </div>
         <div id="potato">
           <div id="powder">
             <div class="sparkle">
