--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
       </div>
       <div id="asterwrap">
-        <div id="sardineaster"></div>
-        <div id="canolaaster"></div>
-        <div id="mapleaster"></div>
-        <div id="sageaster"></div>
+        <div id="chloroplast"></div>
+        <div id="mitochondria"></div>
+        <div id="ribosome"></div>
+        <div id="nucleus"></div>
         <div id="asterism">
           <div id="strawberry">
             <a href="https://www.instagram.com/mobiusdonut/"><ion-icon name="logo-instagram"></ion-icon></a>
