--- a/snowball.html
+++ b/snowball.html
@@ -4,11 +4,11 @@
     <title>Snowball Earth</title>
     <meta name="description" content="Earth in WebVR!">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="snowball.css">
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script src="zdog-demo.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="index.js"></script>
+    <script src="snowball.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Raleway&display=swap" rel="stylesheet">
 
   </head>
