--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div id="powder">
             <div class="sparkle">
               <aaa>001</aaa>
-              <a href="snowball.html">Sample link 1</a>
+              <a href="/snowball.html">Sample link 1</a>
             </div>
           </div>
         </div>
