--- a/index.html
+++ b/index.html
@@ -1,45 +1,15 @@
 <!DOCTYPE html>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "//www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="//www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# blog: http://ogp.me/ns/blog#">
+<html>
+  <head>
     <title>curiosity is a state of being</title>
-    <link rel="stylesheet" media="screen" href="https://assets.tumblr.com/client/prod/standalone/blog-network-npf/index.build.css?_v=ef3c5f9e2bfc3b55a525701220c2a0e7">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-    <script src="//static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
-    <script>
-      (function($){
-      $(document).ready(function(){
-      $("a[title]").style_my_tooltips({
-      tip_follows_cursor:true,
-      tip_delay_time:120,
-      tip_fade_speed:120,
-      attribute:"title"
-      });
-      });
-      })(jQuery);
-    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script>
-      $(document).ready(function(){
-         $('.photo-slideshow').pxuPhotoset({
-             lightbox: true,
-             rounded: false,
-             gutter: '10px',
-             borderRadius: '0px',
-             photoset: '.photo-slideshow',
-             photoWrap: '.photo-data',
-             photo: '.pxu-photo'
-         });
-      });
-    </script>
-    <script src ="//static.tumblr.com/fwgzvyf/Oj1o08f6h/shythemes.vr.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <link href="https://fonts.googleapis.com/css?family=Karla|Quicksand|Space+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="//static.tumblr.com/2pnwama/IUZoyg6qw/specialfonts.css">
-    <!-- "saturnicons" icon font by saturnthms -->
-    <link href="//dl.dropbox.com/s/50g6fbds3rh4m0j/saturnicons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="img/donut.png"/>
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </head>
   <body>
     <div id="toppie"></div>
@@ -61,8 +31,8 @@
         </div>
         <div id="descwrap">
           <img class="search" src="img/search.png" width=35px height=35px>
-          <div class="typewriter">
-            <p class="descid" style="margin-top:5px;margin-left:5px">mobiusdonut</p>
+          <div class="typed_wrap">
+            <span class="typed descid"></span>
           </div>
         </div>
       </div>
@@ -100,6 +70,5 @@
         </div>
       </div>
     </div>
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
